feat: configure public folder for assets

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Aviasales Frontend</title>
 </head>
-
-
-<body>
-</body>
-
-</html>
+<div class="wrapper">
+	<header>
+		<div class="block-logo">
+			<img src="/img/logo.svg" alt="Logo">
+		</div>
+	</header>
+	<div class="container">
+		<aside></aside>
+		<main>
+		</main>
+	</div>
+</div>
