--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
 	<header>
 		<div class="block-logo">
-			<img src="./img/logo.svg" alt="Logo">
+			<!-- <img src="./img/logo.svg" alt="Logo"> -->
 		</div>
 	</header>
 	<main class="app" id="app">
